--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
-    "google-closure-compiler-js": "^20180319.0.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "unminified-webpack-plugin": "^2.0.0",
     "webpack": "^4.1.1",
