--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "unminified-webpack-plugin": "^2.0.0",
     "webpack": "^4.1.1",
