--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production",
     "start": "webpack-dev-server",
-    "test": "eslint src"
+    "test": "mocha --require babel-core/register"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.10.0",
+    "mocha": "^5.0.5",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "unminified-webpack-plugin": "^2.0.0",
     "webpack": "^4.1.1",
