--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typograph",
   "version": "1.0.13",
   "description": "A compliant JavaScript typing animation library.",
-  "main": "src/typograph.js",
+  "main": "lib/typograph.min.js",
   "scripts": {
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production",
